[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/d_monigote_strip13.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Muerto.gd" type="Script" id=2]
[ext_resource path="res://Sounds/s_muerte.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="Muerto" type="Area2D" groups=["jugadores", "muertos"]]
collision_layer = 0
monitorable = false
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Coli" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Craneo" type="Sprite" parent="."]
position = Vector2( 0, -22 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
hframes = 13
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Herida0" type="Sprite" parent="Craneo"]
position = Vector2( -6, -6 )
texture = ExtResource( 1 )
hframes = 13
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Herida1" type="Sprite" parent="Craneo"]
position = Vector2( 17, -16 )
texture = ExtResource( 1 )
hframes = 13
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Herida2" type="Sprite" parent="Craneo"]
position = Vector2( -20, -16 )
texture = ExtResource( 1 )
hframes = 13
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Herida3" type="Sprite" parent="Craneo"]
position = Vector2( 20, -40 )
texture = ExtResource( 1 )
hframes = 13
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Herida4" type="Sprite" parent="Craneo"]
position = Vector2( -16, -36 )
texture = ExtResource( 1 )
hframes = 13
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Corona" type="Sprite" parent="Craneo"]
position = Vector2( 1, -62 )
texture = ExtResource( 1 )
hframes = 13
frame = 7
__meta__ = {
"_edit_lock_": true
}

[node name="NomSom" type="Label" parent="."]
margin_left = -52.0
margin_top = -41.0
margin_right = 52.0
margin_bottom = -19.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Nombre" type="Label" parent="."]
margin_left = -52.0
margin_top = -41.0
margin_right = 52.0
margin_bottom = -19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="AudMuerto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
autoplay = true

[connection signal="area_entered" from="." to="." method="_on_Muerto_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Muerto_area_exited"]
